# blackhat_cv_vuln

./: .gitignore  .railwayignore  DEBUG_GUIDE.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_SUMMARY.md  Dockerfile  Dockerfile.backup  GUNICORN_IMPLEMENTATION.md  Procfile  README.md  app.html  debug_deployment.py  deploy.sh  docker-compose.yml  model_file.py  nixpacks.toml  pyproject.toml  railway.json  requirements.txt  server.py  server_debug.py  start.sh  test_deployment.py  test_gunicorn.py  test_port.py
.railway/: nixpacks.toml
deployment/: Procfile  server.py
