[project]
name = "authentication-app"
version = "0.1.0"
description = "Live face recognition app with camera access"
requires-python = ">=3.10"
dependencies = [
    "flask>=2.3.0",
    "dill>=0.4.0",
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",    
    "torch>=2.0.0",        
    "ultralytics>=8.0.0",
    "facenet-pytorch>=2.6.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "flask-cors>=4.0.0",    
    "onnxruntime>=1.22.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0"
]

[tool.uv]
dev-dependencies = [
    "flask>=2.3.0",
    "opencv-python>=4.8.0", 
    "numpy>=1.24.0",
    "tensorflow>=2.13.0",
    "pillow>=10.0.0"
]